// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InpaasSummary Should render correct info for inpaas review 1`] = `
<DocumentFragment>
  .c5 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c0 {
  margin-bottom: 3rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .analytics-card-container {
  min-height: 20rem;
  margin-bottom: 0.85rem;
}

.c0 .analytics-card-container > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.c1 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.c1 h2 {
  margin: 0;
  font-size: 1.15rem;
}

.c1 svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c2 span {
  border: solid 1px var(--border-new);
  color: var(--primary);
  border-radius: 0.25rem;
  font-weight: bold;
  padding: 0.25rem 0.75rem;
  font-size: 0.75rem;
}

.c2 span b {
  font-weight: bold;
  color: var(--lightest);
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  font-size: 0.5rem;
}

.c3 {
  width: 100%;
  height: 100%;
  background: var(--dark);
  border: 1px solid var(--border-new);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  border-radius: 0.5rem;
  padding: 1rem 1.15rem;
  min-height: 6rem;
}

.c3 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  font-weight: bold;
  line-height: normal;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--lightest);
  position: relative;
  font-size: 0.65rem;
  padding: 0.25rem 0;
  margin-bottom: 0.25rem;
  max-height: 2rem;
}

.c4 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c6 {
  line-height: normal;
  font-size: 1.5rem;
}

.c6 sup {
  font-size: 1rem;
  padding: 0.25rem;
}

.c6 span {
  color: var(--subtext-3);
  font-size: 12px;
  line-height: 15px;
}

.c6 .allocation-separator {
  height: 23px;
  width: 2px;
  background: var(--border-new);
}

.c7 {
  margin-left: auto;
  color: var(--lightest);
  font-size: 0.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 0;
  background: none;
  border: none;
}

@media (min-width:1600px) {
  .c5 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c1 h2 {
    font-size: 1.5rem;
  }
}

@media (min-width:1600px) {
  .c1 svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c2 span {
    font-size: 0.9rem;
  }
}

@media (min-width:1600px) {
  .c2 span b {
    font-size: 0.725rem;
  }
}

@media (min-width:1600px) {
  .c3 {
    border-radius: 0.625rem;
    padding: 1rem 1.65rem 1.65rem 1.65rem;
  }
}

@media (min-width:1600px) {
  .c4 {
    font-size: 0.75rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:1600px) {
  .c4 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c6 {
    font-size: 1.95rem;
  }
}

@media (min-width:1600px) {
  .c6 sup {
    font-size: 1.15rem;
  }
}

<div
    class="container-fluid"
  >
    <section
      class="c0 container-fluid"
    >
      <div
        class="mb-2 row"
      >
        <div
          class="c1 col-16"
        >
          <h2>
            Summary 
          </h2>
        </div>
        <div
          class="c2 col-8 d-flex align-items-center justify-content-end"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Yield
              <i
                class="c5"
              >
                <svg>
                  info.svg
                </svg>
              </i>
            </div>
            <div
              class="c6"
            >
              0.25
              <sup>
                %
              </sup>
              <span>
                /annual
              </span>
            </div>
          </div>
        </div>
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Income
              <i
                class="c5"
              >
                <svg>
                  info.svg
                </svg>
              </i>
              <button
                class="c7"
                type="button"
              >
                Annual
              </button>
            </div>
            <div
              class="c6"
            >
              $550
              <sup>
                .00
              </sup>
              <span>
                /monthly
              </span>
            </div>
          </div>
        </div>
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Risk
              <i
                class="c5"
              >
                <svg>
                  info.svg
                </svg>
              </i>
              <button
                class="c7"
                type="button"
              >
                Max Drawdown
              </button>
            </div>
            <div
              class="c6"
            >
              5.00
              <sup>
                %
              </sup>
            </div>
          </div>
        </div>
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Allocation
            </div>
            <div
              class="c6"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div>
                  3.00
                  <sup>
                    %
                  </sup>
                  <span>
                    /min
                  </span>
                </div>
                <div
                  class="allocation-separator"
                />
                <div>
                  25.00
                  <sup>
                    %
                  </sup>
                  <span>
                    /max
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`InpaasSummary Should render correct info for saved inpaas portfolio 1`] = `
<DocumentFragment>
  .c5 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c0 {
  margin-bottom: 3rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .analytics-card-container {
  min-height: 20rem;
  margin-bottom: 0.85rem;
}

.c0 .analytics-card-container > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.c1 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.c1 h2 {
  margin: 0;
  font-size: 1.15rem;
}

.c1 svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c2 span {
  border: solid 1px var(--border-new);
  color: var(--primary);
  border-radius: 0.25rem;
  font-weight: bold;
  padding: 0.25rem 0.75rem;
  font-size: 0.75rem;
}

.c2 span b {
  font-weight: bold;
  color: var(--lightest);
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  font-size: 0.5rem;
}

.c3 {
  width: 100%;
  height: 100%;
  background: var(--dark);
  border: 1px solid var(--border-new);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  border-radius: 0.5rem;
  padding: 1rem 1.15rem;
  min-height: 6rem;
}

.c3 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  font-weight: bold;
  line-height: normal;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--lightest);
  position: relative;
  font-size: 0.65rem;
  padding: 0.25rem 0;
  margin-bottom: 0.25rem;
  max-height: 2rem;
}

.c4 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c6 {
  line-height: normal;
  font-size: 1.5rem;
}

.c6 sup {
  font-size: 1rem;
  padding: 0.25rem;
}

.c6 span {
  color: var(--subtext-3);
  font-size: 12px;
  line-height: 15px;
}

.c6 .allocation-separator {
  height: 23px;
  width: 2px;
  background: var(--border-new);
}

.c7 {
  margin-left: auto;
  color: var(--lightest);
  font-size: 0.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 0;
  background: none;
  border: none;
}

@media (min-width:1600px) {
  .c5 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c1 h2 {
    font-size: 1.5rem;
  }
}

@media (min-width:1600px) {
  .c1 svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c2 span {
    font-size: 0.9rem;
  }
}

@media (min-width:1600px) {
  .c2 span b {
    font-size: 0.725rem;
  }
}

@media (min-width:1600px) {
  .c3 {
    border-radius: 0.625rem;
    padding: 1rem 1.65rem 1.65rem 1.65rem;
  }
}

@media (min-width:1600px) {
  .c4 {
    font-size: 0.75rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:1600px) {
  .c4 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c6 {
    font-size: 1.95rem;
  }
}

@media (min-width:1600px) {
  .c6 sup {
    font-size: 1.15rem;
  }
}

<div
    class="container-fluid"
  >
    <section
      class="c0 container-fluid"
    >
      <div
        class="mb-2 row"
      >
        <div
          class="c1 col-16"
        >
          <h2>
            Summary 
          </h2>
        </div>
        <div
          class="c2 col-8 d-flex align-items-center justify-content-end"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Current Yield
              <i
                class="c5"
              >
                <svg>
                  info.svg
                </svg>
              </i>
            </div>
            <div
              class="c6"
            >
              0.30
              <sup>
                %
              </sup>
              <span>
                /annual
              </span>
            </div>
          </div>
        </div>
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Current Income
              <i
                class="c5"
              >
                <svg>
                  info.svg
                </svg>
              </i>
            </div>
            <div
              class="c6"
            >
              $600
              <sup>
                .00
              </sup>
              <span>
                /monthly
              </span>
            </div>
          </div>
        </div>
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Expense ratio
              <i
                class="c5"
              >
                <svg>
                  info.svg
                </svg>
              </i>
            </div>
            <div
              class="c6"
            >
              5.00
              <sup>
                %
              </sup>
            </div>
          </div>
        </div>
        <div
          class="mb-1 col-6"
          data-testid="Portfolio-Metric-Card"
        >
          <div
            class="c3"
          >
            <div
              class="c4 d-flex align-items-center"
            >
              Risk
              <i
                class="c5"
              >
                <svg>
                  info.svg
                </svg>
              </i>
              <button
                class="c7"
                type="button"
              >
                Max Drawdown
              </button>
            </div>
            <div
              class="c6"
            >
              5.00
              <sup>
                %
              </sup>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
